--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     -->
     <link
       rel="stylesheet"
-      type="text/css"
-      href="semantic/dist/semantic.min.css"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <title>React App</title>
   </head>
